--- a/views/userEdit.ejs
+++ b/views/userEdit.ejs
@@ -12,8 +12,8 @@
         var id = document.getElementsByName('userid')[0].value;
         var pwd = document.getElementsByName('password')[0].value;
         var mail = document.getElementsByName('email')[0].value;
-        var p = document.getElementsByName('phone')[0].value;
-        if (id && pwd && mail && p) {
+        var phone = document.getElementsByName('phone')[0].value;
+        if (id && pwd && mail && phone) {
             return true;
         }
         alert('please input the info.');
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <form name="editform" action="userEdit" method="post" accept-charset="utf-8" onSubmit="return Check();">
+    <form name="editform" action="/account/userEdit" method="post" accept-charset="utf-8" onSubmit="return Check();">
         <h1>Account - Edit</h1>
         <input type="hidden" name="id" value="<%=data[0].id  %>" />
         <div class="row">
