--- a/views/userAdd.ejs
+++ b/views/userAdd.ejs
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <form name="addform" action="userAdd" method="post" accept-charset="utf-8" onSubmit="return Check();">
+    <form name="addform" action="/account/userAdd" method="post" accept-charset="utf-8" onSubmit="return Check();">
         <h1>Account - Add</h1>
         <div class="row">
             <label>userid：</label>
@@ -38,9 +38,13 @@
             <input type="text" name="email" placeholder="email">
         </div>
         <div class="row">
+            <label>phone：</label>
+            <input type="text" name="phone" placeholder="phone">
+        </div>
+        <div class="row">
             <input class="btn" type='submit' value='Submit'>
             <input class="btn" type='reset' value='Reset'>
-            <input class="btn" type='button' value='Back' onclick="javascript: location.href='/'">
+            <input class="btn" type='button' value='Back' onclick="javascript: location.href='/account'">
             <label class="msgerr">
                 <%=msg %>
             </label>
